--- a/www/templates/blog.html
+++ b/www/templates/blog.html
@@ -30,9 +30,15 @@ $(function () {
 {% block content %}
 
     <div class="uk-width-medium-3-4">
+
         <article class="uk-article">
             <h2>{{ blog.name }}</h2>
-            <p class="uk-article-meta">发表于{{ blog.created_at|datetime }}</p>
+            <p class="uk-article-meta">发表于&nbsp;{{ blog.created_at|datetime }}</p>
+            {% if __user__ %}
+                {% if __user__.admin %}
+                    <button onclick="location='/manage/blogs/edit?id={{blog.id}}'" class="uk-button uk-button-primary uk-float-right">编辑</button>
+                {% endif %}
+            {% endif %}
             <p>{{ blog.html_content|safe }}</p>
         </article>
 
