--- a/www/templates/manage_blog_edit.html
+++ b/www/templates/manage_blog_edit.html
@@ -63,8 +63,11 @@ $(function () {
         $('#loading').hide();
         initVM({
             name: '',
+            category: '',
+            tags: '',
             summary: '',
-            content: ''
+            content: '',
+
         });
     }
 });
@@ -100,6 +103,18 @@ $(function () {
                 <label class="uk-form-label">标题:</label>
                 <div class="uk-form-controls">
                     <input v-model="name" name="name" type="text" placeholder="标题" class="uk-width-1-1">
+                </div>
+            </div>
+            <div class="uk-form-row uk-width-2-5">
+                <label class="uk-form-label">分类:</label>
+                <div class="uk-form-controls">
+                    <input v-model="category" name="category" type="text" placeholder="分类" class="uk-width-1-1">
+                </div>
+            </div>
+            <div class="uk-form-row uk-width-2-5">
+                <label class="uk-form-label">标签:</label>
+                <div class="uk-form-controls">
+                    <input v-model="tags" name="tags" type="text" placeholder="标签" class="uk-width-1-1">
                 </div>
             </div>
             <div class="uk-form-row uk-width-2-3">
