--- a/www/templates/blog.html
+++ b/www/templates/blog.html
@@ -104,13 +104,9 @@ $(function () {
                 <h3>{{ blog.user_name }}</h3>
             </div>
         </div>
-        <div class="uk-panel uk-panel-header">
-            <h3 class="uk-panel-title">友情链接</h3>
-            <ul class="uk-list uk-list-line">
-                <li><i class="uk-icon-link"></i> <a href="#">编程</a></li>
-                <li><i class="uk-icon-link"></i> <a href="#">思考</a></li>
-                <li><i class="uk-icon-link"></i> <a href="#">读书</a></li>
-            </ul>
+        <div class="uk-panel uk-panel-header uk-panel-box">
+            <h3 class="uk-panel-title">分类</h3>
+            {{category_list|category_list|safe}}
         </div>
     </div>
 
