--- a/www/templates/manage_blogs.html
+++ b/www/templates/manage_blogs.html
@@ -55,6 +55,7 @@ $(function() {
             <ul class="uk-breadcrumb">
                 <li><a href="/manage/comments">评论</a></li>
                 <li class="uk-active"><span>日志</span></li>
+                <li><a href="/manage/drafts">草稿箱</a></li>
                 <li><a href="/manage/users">用户</a></li>
             </ul>
         </div>
