--- a/www/templates/manage_users.html
+++ b/www/templates/manage_users.html
@@ -40,6 +40,7 @@ $(function() {
             <ul class="uk-breadcrumb">
                 <li><a href="/manage/comments">评论</a></li>
                 <li><a href="/manage/blogs">日志</a></li>
+                <li><a href="/manage/drafts">草稿箱</a></li>
                 <li class="uk-active"><span>用户</span></li>
             </ul>
         </div>
