--- a/www/templates/manage_drafts.html
+++ b/www/templates/manage_drafts.html
@@ -1,26 +1,27 @@
 {% extends '__base__.html' %}
 
-{% block title %}评论{% endblock %}
+{% block title %}日志{% endblock %}
 
 {% block beforehead %}
 
 <script>
 
 function initVM(data) {
-    $('#vm').show();
     var vm = new Vue({
         el: '#vm',
         data: {
-            comments: data.comments,
+            blogs: data.blogs,
             page: data.page
         },
         methods: {
-            delete_comment: function (comment) {
-                var content = comment.content.length > 20 ? comment.content.substring(0, 20) + '...' : comment.content;
-                if (confirm('确认要删除评论“' + comment.content + '”？删除后不可恢复！')) {
-                    postJSON('/api/comments/' + comment.id + '/delete', function (err, r) {
+            edit_blog: function (blog) {
+                location.assign('/manage/drafts/edit?id=' + blog.id);
+            },
+            delete_blog: function (blog) {
+                if (confirm('确认要删除“' + blog.name + '”？删除后不可恢复！')) {
+                    postJSON('/api/drafts/' + blog.id + '/delete', function (err, r) {
                         if (err) {
-                            return error(err);
+                            return alert(err.message || err.error || err);
                         }
                         refresh();
                     });
@@ -28,10 +29,11 @@ function initVM(data) {
             }
         }
     });
+    $('#vm').show();
 }
 
 $(function() {
-    getJSON('/api/comments', {
+    getJSON('/api/drafts', {
         page: {{ page_index }}
     }, function (err, results) {
         if (err) {
@@ -51,9 +53,9 @@ $(function() {
     <div class="uk-width-1-1 uk-margin-bottom">
         <div class="uk-panel uk-panel-box">
             <ul class="uk-breadcrumb">
-                <li class="uk-active"><span>评论</span></li>
+                <li><a href="/manage/comments">评论</a></li>
                 <li><a href="/manage/blogs">日志</a></li>
-                <li><a href="/manage/drafts">草稿箱</a></li>
+                <li class="uk-active"><span>草稿箱</span></li>
                 <li><a href="/manage/users">用户</a></li>
             </ul>
         </div>
@@ -66,33 +68,34 @@ $(function() {
         <span><i class="uk-icon-spinner uk-icon-medium uk-icon-spin"></i> 正在加载...</span>
     </div>
 
-    <div id="vm" class="uk-width-1-1" style="display:none">
+    <div id="vm" class="uk-width-1-1">
+        <a href="/manage/blogs/create" class="uk-button uk-button-primary"><i class="uk-icon-plus"></i> 新日志</a>
+
         <table class="uk-table uk-table-hover">
             <thead>
                 <tr>
+                    <th class="uk-width-5-10">标题 / 摘要</th>
                     <th class="uk-width-2-10">作者</th>
-                    <th class="uk-width-5-10">内容</th>
-                    <th class="uk-width-2-10">创建时间</th>
                     <th class="uk-width-1-10">操作</th>
                 </tr>
             </thead>
             <tbody>
-                <tr v-repeat="comment: comments" >
+                <tr v-repeat="blog: blogs" >
                     <td>
-                        <span v-text="comment.user_name"></span>
+                        <a target="_blank" v-attr="href: '/manage/drafts/edit?id='+blog.id" v-text="blog.name"></a>
                     </td>
                     <td>
-                        <span v-text="comment.content"></span>
+                        <a target="_blank" v-attr="href: '/user/'+blog.user_id" v-text="blog.user_name"></a>
                     </td>
                     <td>
-                        <span v-text="comment.created_at.toDateTime()"></span>
-                    </td>
-                    <td>
-                        <a href="#0" v-on="click: delete_comment(comment)"><i class="uk-icon-trash-o"></i>
+                        <a href="#0" v-on="click: edit_blog(blog)"><i class="uk-icon-edit"></i></a>
+                        <a href="#0" v-on="click: delete_blog(blog)"><i class="uk-icon-trash-o"></i></a>
                     </td>
                 </tr>
             </tbody>
         </table>
+
         <div v-component="pagination" v-with="page"></div>
     </div>
+
 {% endblock %}
